[package]
name = "prost-build"
version = "0.6.1"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"
repository = "https://github.com/danburkert/prost"
documentation = "https://docs.rs/prost-build"
readme = "README.md"
description = "A Protocol Buffers implementation for the Rust Language."
edition = "2018"

[dependencies]
heck = "0.3"
log = "0.4"
itertools = { version = "0.8", default-features = false, features = [] }
bytes = { git = "https://github.com/mesalock-linux/bytes-sgx" }
multimap = { version = "0.8", default-features = false }
petgraph = { version = "0.5", default-features = false }
prost = { git = "https://github.com/coconano/prost-sgx" }
prost-types = { git = "https://github.com/coconano/prost-sgx" }
tempfile = "3"

[build-dependencies]
which = { version = "3", default-features = false }

[dev-dependencies]
env_logger = { version = "0.7", default-features = false }
